accelerated-domains: add cnlanling.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22249,6 +22249,7 @@ server=/cnkuai.com/114.114.114.114
 server=/cnky.net/114.114.114.114
 server=/cnlandfill.net/114.114.114.114
 server=/cnlang.org/114.114.114.114
+server=/cnlanling.com/114.114.114.114
 server=/cnlaw.net/114.114.114.114
 server=/cnlawweb.net/114.114.114.114
 server=/cnldzc.com/114.114.114.114
