accelerated-domains: add hengtonggroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41235,6 +41235,7 @@ server=/hengtaiboyuan.com/114.114.114.114
 server=/hengtiansoft.com/114.114.114.114
 server=/hengtianyun.com/114.114.114.114
 server=/hengtong-sd.com/114.114.114.114
+server=/hengtonggroup.com/114.114.114.114
 server=/hengtongjuice-usa.com/114.114.114.114
 server=/hengxiangtaji.com/114.114.114.114
 server=/hengxinjinshu.com/114.114.114.114
