accelerated-domains: add hscarbonfibre.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43309,6 +43309,7 @@ server=/hsbdc.com/114.114.114.114
 server=/hsbdjx.com/114.114.114.114
 server=/hsbianma.com/114.114.114.114
 server=/hsbiao.com/114.114.114.114
+server=/hscarbonfibre.com/114.114.114.114
 server=/hscbw.com/114.114.114.114
 server=/hscn.com/114.114.114.114
 server=/hscode123.com/114.114.114.114
