accelerated-domains: add ihigee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46424,6 +46424,7 @@ server=/ihemuu.com/114.114.114.114
 server=/ihengheng.com/114.114.114.114
 server=/ihepa.com/114.114.114.114
 server=/ihggccampaign.com/114.114.114.114
+server=/ihigee.com/114.114.114.114
 server=/ihint.me/114.114.114.114
 server=/ihisce.com/114.114.114.114
 server=/ihitui.com/114.114.114.114
