--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48430,6 +48430,7 @@ server=/jbddoors.com/114.114.114.114
 server=/jbdkj.com/114.114.114.114
 server=/jbdown.com/114.114.114.114
 server=/jbelf.com/114.114.114.114
+server=/jbepharm.com/114.114.114.114
 server=/jbers.com/114.114.114.114
 server=/jbhtp.com/114.114.114.114
 server=/jbjc.org/114.114.114.114
