accelerated-domains: add jcetglobal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48483,6 +48483,7 @@ server=/jce8.com/114.114.114.114
 server=/jcebid.com/114.114.114.114
 server=/jcecom.com/114.114.114.114
 server=/jcedu.org/114.114.114.114
+server=/jcetglobal.com/114.114.114.114
 server=/jcf94.com/114.114.114.114
 server=/jcgcn.com/114.114.114.114
 server=/jcgcw.com/114.114.114.114
