accelerated-domains: add jsycport.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51523,6 +51523,7 @@ server=/jsxzkingdee.com/114.114.114.114
 server=/jsxzty.com/114.114.114.114
 server=/jsybjz.com/114.114.114.114
 server=/jsyc-marathon.com/114.114.114.114
+server=/jsycport.com/114.114.114.114
 server=/jsycsy.com/114.114.114.114
 server=/jsyczls.com/114.114.114.114
 server=/jsyd139.com/114.114.114.114
