accelerated-domains: add manfred-auto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59310,6 +59310,7 @@ server=/manew.com/114.114.114.114
 server=/manewvr.com/114.114.114.114
 server=/manfen.net/114.114.114.114
 server=/manfen5.com/114.114.114.114
+server=/manfred-auto.com/114.114.114.114
 server=/manfrottoclub.com/114.114.114.114
 server=/mangafuna.xyz/114.114.114.114
 server=/manganesenanhai.com/114.114.114.114
