accelerated-domains: add yasudachem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95168,6 +95168,7 @@ server=/yasishuo.com/114.114.114.114
 server=/yasiyasi.com/114.114.114.114
 server=/yasking.org/114.114.114.114
 server=/yasn.com/114.114.114.114
+server=/yasudachem.com/114.114.114.114
 server=/yasuoji-shanyan.com/114.114.114.114
 server=/yasuotu.com/114.114.114.114
 server=/yasyy.com/114.114.114.114
