accelerated-domains: add zikoo-int.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101850,6 +101850,7 @@ server=/zikaoshu.net/114.114.114.114
 server=/zikaoshu.vip/114.114.114.114
 server=/zikaosw.com/114.114.114.114
 server=/zikeys.com/114.114.114.114
+server=/zikoo-int.com/114.114.114.114
 server=/zikoo.com/114.114.114.114
 server=/zikui-design.com/114.114.114.114
 server=/zilhua.com/114.114.114.114
