accelerated-domains: add cxsteel.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24156,6 +24156,7 @@ server=/cxqqk.com/114.114.114.114
 server=/cxrczpw.com/114.114.114.114
 server=/cxsdszx.com/114.114.114.114
 server=/cxsm.com/114.114.114.114
+server=/cxsteel.com/114.114.114.114
 server=/cxstgc.com/114.114.114.114
 server=/cxsw3d.com/114.114.114.114
 server=/cxta.com/114.114.114.114
