--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35795,6 +35795,7 @@ server=/gthzc.com/114.114.114.114
 server=/gti56.com/114.114.114.114
 server=/gtibee.com/114.114.114.114
 server=/gtig.com/114.114.114.114
+server=/gtiggm.com/114.114.114.114
 server=/gtimg.com/114.114.114.114
 server=/gtja-allianz.com/114.114.114.114
 server=/gtja.com/114.114.114.114
