--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45583,6 +45583,7 @@ server=/ianxing.com/114.114.114.114
 server=/iaocwbk.com/114.114.114.114
 server=/iaosua.com/114.114.114.114
 server=/iaoyou.com/114.114.114.114
+server=/iape-js.com/114.114.114.114
 server=/iapijy.com/114.114.114.114
 server=/iapkk.com/114.114.114.114
 server=/iapolo.com/114.114.114.114
