accelerated-domains: add jfagroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48855,6 +48855,7 @@ server=/jf258.com/114.114.114.114
 server=/jf311.com/114.114.114.114
 server=/jf900.com/114.114.114.114
 server=/jf9p.com/114.114.114.114
+server=/jfagroup.com/114.114.114.114
 server=/jfapv.net/114.114.114.114
 server=/jfbcb.com/114.114.114.114
 server=/jfbuilding.com/114.114.114.114
