--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51312,6 +51312,7 @@ server=/jshrconsult.com/114.114.114.114
 server=/jshrtfl.com/114.114.114.114
 server=/jshsoft.com/114.114.114.114
 server=/jshtcm.com/114.114.114.114
+server=/jshtsteel.com/114.114.114.114
 server=/jshuachen.com/114.114.114.114
 server=/jshuafu.com/114.114.114.114
 server=/jshuitian.com/114.114.114.114
