--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78982,6 +78982,7 @@ server=/sudasuta.com/114.114.114.114
 server=/sudayz.com/114.114.114.114
 server=/suddenfix.com/114.114.114.114
 server=/sudduo.com/114.114.114.114
+server=/sudecoating.com/114.114.114.114
 server=/sudoinfotech.com/114.114.114.114
 server=/sudu-67ph.com/114.114.114.114
 server=/sudu-72ub.com/114.114.114.114
