--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95953,6 +95953,7 @@ server=/yicungn.com/114.114.114.114
 server=/yicx.com/114.114.114.114
 server=/yida6666.com/114.114.114.114
 server=/yidaba.com/114.114.114.114
+server=/yidachem.com/114.114.114.114
 server=/yidachina.com/114.114.114.114
 server=/yidadrillcollar.com/114.114.114.114
 server=/yidahospital.com/114.114.114.114
