accelerated-domains: add zenkungforging.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99939,6 +99939,7 @@ server=/zenith-group.net/114.114.114.114
 server=/zenithmining.com/114.114.114.114
 server=/zenithspace.net/114.114.114.114
 server=/zenixauto.com/114.114.114.114
+server=/zenkungforging.com/114.114.114.114
 server=/zenlesszonezero.com/114.114.114.114
 server=/zenmen.com/114.114.114.114
 server=/zenner-metering.com/114.114.114.114
