--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19980,6 +19980,7 @@ server=/chinaexpressair.com/114.114.114.114
 server=/chinafa.org/114.114.114.114
 server=/chinafarad.com/114.114.114.114
 server=/chinafashionbao.com/114.114.114.114
+server=/chinafasten.com/114.114.114.114
 server=/chinafbdq.com/114.114.114.114
 server=/chinafeiting.com/114.114.114.114
 server=/chinafert-gov.com/114.114.114.114
