accelerated-domains: add chinalpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20154,6 +20154,7 @@ server=/chinaliyou.com/114.114.114.114
 server=/chinalm.org/114.114.114.114
 server=/chinalonghu.com/114.114.114.114
 server=/chinalowcarb.com/114.114.114.114
+server=/chinalpharm.com/114.114.114.114
 server=/chinalsjt.com/114.114.114.114
 server=/chinalubricant.com/114.114.114.114
 server=/chinalulutong.com/114.114.114.114
