--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50491,6 +50491,7 @@ server=/jjtonline.com/114.114.114.114
 server=/jjtravel.com/114.114.114.114
 server=/jjttjx.com/114.114.114.114
 server=/jjw.com/114.114.114.114
+server=/jjwdz.com/114.114.114.114
 server=/jjwli.com/114.114.114.114
 server=/jjwsx.com/114.114.114.114
 server=/jjwxc.com/114.114.114.114
