--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79434,6 +79434,7 @@ server=/suyujoy.com/114.114.114.114
 server=/suyun.net/114.114.114.114
 server=/suyunj.com/114.114.114.114
 server=/suyutech.com/114.114.114.114
+server=/suzhongyy.com/114.114.114.114
 server=/suzhou-marathon.com/114.114.114.114
 server=/suzhou-otsuka.com/114.114.114.114
 server=/suzhoubank.com/114.114.114.114
