--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82024,6 +82024,7 @@ server=/tianhujy.com/114.114.114.114
 server=/tianiot.com/114.114.114.114
 server=/tianji368.com/114.114.114.114
 server=/tianjiachem.com/114.114.114.114
+server=/tianjiang-tech.com/114.114.114.114
 server=/tianjiarun.com/114.114.114.114
 server=/tianjigame.com/114.114.114.114
 server=/tianjigu.com/114.114.114.114
