--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89399,6 +89399,7 @@ server=/woodbunny.com/114.114.114.114
 server=/woodchina.com/114.114.114.114
 server=/woodnn.com/114.114.114.114
 server=/woodsbrosrental.com/114.114.114.114
+server=/woofee-laser.com/114.114.114.114
 server=/wooffice.net/114.114.114.114
 server=/wooide.com/114.114.114.114
 server=/woola.net/114.114.114.114
