--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14974,6 +14974,7 @@ server=/bishengoffice.com/114.114.114.114
 server=/bisheziliao.com/114.114.114.114
 server=/bishijie.com/114.114.114.114
 server=/bison-technologies.com/114.114.114.114
+server=/bisonglighting.com/114.114.114.114
 server=/bisonscm.com/114.114.114.114
 server=/bisp.com/114.114.114.114
 server=/bit-king.net/114.114.114.114
