accelerated-domains: add feida-china.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31169,6 +31169,7 @@ server=/feicui168.com/114.114.114.114
 server=/feicui99.com/114.114.114.114
 server=/feicuishuo.com/114.114.114.114
 server=/feicuiwuyu.com/114.114.114.114
+server=/feida-china.net/114.114.114.114
 server=/feidacrusher.com/114.114.114.114
 server=/feidaep.com/114.114.114.114
 server=/feidaoboke.com/114.114.114.114
