accelerated-domains: add guolianchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36321,6 +36321,7 @@ server=/guoku.com/114.114.114.114
 server=/guolaiwanba.com/114.114.114.114
 server=/guole.fun/114.114.114.114
 server=/guoli.com/114.114.114.114
+server=/guolianchem.com/114.114.114.114
 server=/guoliangjie.com/114.114.114.114
 server=/guolianglab.org/114.114.114.114
 server=/guolin.tech/114.114.114.114
