accelerated-domains: add js-jwt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51189,6 +51189,7 @@ server=/jrzyzs.com/114.114.114.114
 server=/js-aerfa.com/114.114.114.114
 server=/js-fangyuan.com/114.114.114.114
 server=/js-jinhua.com/114.114.114.114
+server=/js-jwt.com/114.114.114.114
 server=/js-lottery.com/114.114.114.114
 server=/js-powerstone.com/114.114.114.114
 server=/js-shenghang.com/114.114.114.114
