accelerated-domains: add lsjtjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57906,6 +57906,7 @@ server=/lsjlp8.com/114.114.114.114
 server=/lsjnwxly.com/114.114.114.114
 server=/lsjo.com/114.114.114.114
 server=/lsjrcdn.com/114.114.114.114
+server=/lsjtjs.com/114.114.114.114
 server=/lsjvip.com/114.114.114.114
 server=/lsjxck.com/114.114.114.114
 server=/lsjxww.com/114.114.114.114
