--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16382,6 +16382,7 @@ server=/brunoxu.com/114.114.114.114
 server=/brxjzp.com/114.114.114.114
 server=/brxtal.com/114.114.114.114
 server=/bryonypie.com/114.114.114.114
+server=/bryzq.com/114.114.114.114
 server=/bs-bz.com/114.114.114.114
 server=/bs-dolfin.net/114.114.114.114
 server=/bs-lab.com/114.114.114.114
