accelerated-domains: add cjdg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21200,6 +21200,7 @@ server=/cjbjedu.com/114.114.114.114
 server=/cjcn.com/114.114.114.114
 server=/cjcnn.com/114.114.114.114
 server=/cjdcw.com/114.114.114.114
+server=/cjdg.com/114.114.114.114
 server=/cjdropshipping.com/114.114.114.114
 server=/cjdsp.com/114.114.114.114
 server=/cjdx1.com/114.114.114.114
