accelerated-domains: add i-sensjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45481,6 +45481,7 @@ server=/i-now.com/114.114.114.114
 server=/i-ones.com/114.114.114.114
 server=/i-oranges.com/114.114.114.114
 server=/i-same.com/114.114.114.114
+server=/i-sensjs.com/114.114.114.114
 server=/i-shu.com/114.114.114.114
 server=/i-size.com/114.114.114.114
 server=/i-tetris.com/114.114.114.114
