--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77823,6 +77823,7 @@ server=/sobili.com/114.114.114.114
 server=/sobot.com/114.114.114.114
 server=/sobot.io/114.114.114.114
 server=/soboten.com/114.114.114.114
+server=/sobute.com/114.114.114.114
 server=/socang.com/114.114.114.114
 server=/socay.com/114.114.114.114
 server=/soccerbar.cc/114.114.114.114
