--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51452,6 +51452,7 @@ server=/jssddz.com/114.114.114.114
 server=/jssdezyy.com/114.114.114.114
 server=/jssdh.com/114.114.114.114
 server=/jssfx.com/114.114.114.114
+server=/jssgjjt.com/114.114.114.114
 server=/jsshfcw.com/114.114.114.114
 server=/jsshow.net/114.114.114.114
 server=/jsshrzx.com/114.114.114.114
