--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23341,6 +23341,7 @@ server=/cqrfym.com/114.114.114.114
 server=/cqrm.com/114.114.114.114
 server=/cqrmb.com/114.114.114.114
 server=/cqrmrq.com/114.114.114.114
+server=/cqs-hm.com/114.114.114.114
 server=/cqsckj02.com/114.114.114.114
 server=/cqscmy.net/114.114.114.114
 server=/cqsfybjy.com/114.114.114.114
