--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50242,6 +50242,7 @@ server=/jiudianjiu.com/114.114.114.114
 server=/jiudianxing.com/114.114.114.114
 server=/jiudianyongpin.com/114.114.114.114
 server=/jiudingcapital.com/114.114.114.114
+server=/jiudinggroup.com/114.114.114.114
 server=/jiudingref.com/114.114.114.114
 server=/jiufuquan.com/114.114.114.114
 server=/jiugang.com/114.114.114.114
