--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50912,6 +50912,7 @@ server=/jobvvv.com/114.114.114.114
 server=/jobxinpg.com/114.114.114.114
 server=/jobyp.com/114.114.114.114
 server=/jocat.com/114.114.114.114
+server=/jocltd.com/114.114.114.114
 server=/joctech.com/114.114.114.114
 server=/jocund-gift.com/114.114.114.114
 server=/joe92.com/114.114.114.114
