--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51272,6 +51272,7 @@ server=/jsenews.com/114.114.114.114
 server=/jseoptics.com/114.114.114.114
 server=/jsep.com/114.114.114.114
 server=/jser.io/114.114.114.114
+server=/jsexpressway.com/114.114.114.114
 server=/jsf666.com/114.114.114.114
 server=/jsfj.net/114.114.114.114
 server=/jsfmly.com/114.114.114.114
