--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51536,6 +51536,7 @@ server=/jsxinfeng.com/114.114.114.114
 server=/jsxinfly.com/114.114.114.114
 server=/jsxionghuojxzz.com/114.114.114.114
 server=/jsxkxc.com/114.114.114.114
+server=/jsxlhb.com/114.114.114.114
 server=/jsxmw.com/114.114.114.114
 server=/jsxpbc.com/114.114.114.114
 server=/jsxxzh.com/114.114.114.114
