--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51573,6 +51573,7 @@ server=/jszdlssws.com/114.114.114.114
 server=/jszf.org/114.114.114.114
 server=/jszg.org/114.114.114.114
 server=/jszhaobiao.com/114.114.114.114
+server=/jszhongci.com/114.114.114.114
 server=/jszhongte.com/114.114.114.114
 server=/jszhongyoutang.com/114.114.114.114
 server=/jszjgg.net/114.114.114.114
