accelerated-domains: add natachem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63066,6 +63066,7 @@ server=/nasyun.com/114.114.114.114
 server=/nasyy.com/114.114.114.114
 server=/naszy.com/114.114.114.114
 server=/nat123.com/114.114.114.114
+server=/natachem.com/114.114.114.114
 server=/natalietiles.com/114.114.114.114
 server=/natamoo.com/114.114.114.114
 server=/natapp.cc/114.114.114.114
