--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76970,6 +76970,7 @@ server=/sinobaron.com/114.114.114.114
 server=/sinobasalt.com/114.114.114.114
 server=/sinobasedm.com/114.114.114.114
 server=/sinobestbio.com/114.114.114.114
+server=/sinobp.com/114.114.114.114
 server=/sinobrook.com/114.114.114.114
 server=/sinocache.net/114.114.114.114
 server=/sinocare.com/114.114.114.114
