accelerated-domains: add yangnongchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94998,6 +94998,7 @@ server=/yangmaohao.net/114.114.114.114
 server=/yangmi.net/114.114.114.114
 server=/yangmingauction.com/114.114.114.114
 server=/yangner.com/114.114.114.114
+server=/yangnongchem.com/114.114.114.114
 server=/yangpanzg.com/114.114.114.114
 server=/yangqi.show/114.114.114.114
 server=/yangqianguan.com/114.114.114.114
