--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100002,6 +100002,7 @@ server=/zeuux.com/114.114.114.114
 server=/zeuux.org/114.114.114.114
 server=/zexiaoqiao.com/114.114.114.114
 server=/zeyouquan.com/114.114.114.114
+server=/zeyu99.com/114.114.114.114
 server=/zeyuan.shop/114.114.114.114
 server=/zeze.com/114.114.114.114
 server=/zezhengcnc.com/114.114.114.114
