--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71852,6 +71852,7 @@ server=/regexr-cn.com/114.114.114.114
 server=/reglogo.net/114.114.114.114
 server=/regtm.com/114.114.114.114
 server=/rehiy.com/114.114.114.114
+server=/rehn.cc/114.114.114.114
 server=/rehtt.com/114.114.114.114
 server=/rehuolm.com/114.114.114.114
 server=/rehuwang.com/114.114.114.114
