--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9357,6 +9357,7 @@ server=/ad7.com/114.114.114.114
 server=/ad778.com/114.114.114.114
 server=/ad9377.com/114.114.114.114
 server=/adagaa.com/114.114.114.114
+server=/adamahf.com/114.114.114.114
 server=/adamcoder.com/114.114.114.114
 server=/adamerck.net/114.114.114.114
 server=/adanachina.com/114.114.114.114
