--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10501,6 +10501,7 @@ server=/akomr.com/114.114.114.114
 server=/akpig.com/114.114.114.114
 server=/akplayer.com/114.114.114.114
 server=/akppt.net/114.114.114.114
+server=/akptfe.com/114.114.114.114
 server=/akr-developers.com/114.114.114.114
 server=/akru.plus/114.114.114.114
 server=/akscan.com/114.114.114.114
