accelerated-domains: add jsgerrard.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51292,6 +51292,7 @@ server=/jsgc168.com/114.114.114.114
 server=/jsgcbank.com/114.114.114.114
 server=/jsgclaw.com/114.114.114.114
 server=/jsgdsb.com/114.114.114.114
+server=/jsgerrard.com/114.114.114.114
 server=/jsggwhy.com/114.114.114.114
 server=/jsgh.org/114.114.114.114
 server=/jsghle.com/114.114.114.114
