--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51420,6 +51420,7 @@ server=/jsp158.com/114.114.114.114
 server=/jsp51.com/114.114.114.114
 server=/jspang.com/114.114.114.114
 server=/jspatch.com/114.114.114.114
+server=/jspdg.com/114.114.114.114
 server=/jspeople.com/114.114.114.114
 server=/jspesz.com/114.114.114.114
 server=/jspetro.com/114.114.114.114
