--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93798,6 +93798,7 @@ server=/xshuju.com/114.114.114.114
 server=/xshuma.com/114.114.114.114
 server=/xshuoba.com/114.114.114.114
 server=/xshuoshuo.com/114.114.114.114
+server=/xsignal-ft.com/114.114.114.114
 server=/xsina.net/114.114.114.114
 server=/xsinger.me/114.114.114.114
 server=/xsj21.com/114.114.114.114
