--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16340,6 +16340,7 @@ server=/bridgelawfirm.com/114.114.114.114
 server=/brighost.com/114.114.114.114
 server=/bright-gene.com/114.114.114.114
 server=/bright-trend.com/114.114.114.114
+server=/bright21cn.com/114.114.114.114
 server=/brightdairy.com/114.114.114.114
 server=/brightdecolighting.com/114.114.114.114
 server=/brightfood.com/114.114.114.114
