--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32108,6 +32108,7 @@ server=/focus-efc.com/114.114.114.114
 server=/focus-eloan.com/114.114.114.114
 server=/focus-fusion.com/114.114.114.114
 server=/focuschina.com/114.114.114.114
+server=/focusight.net/114.114.114.114
 server=/focussend.com/114.114.114.114
 server=/focustock.com/114.114.114.114
 server=/fodaba.com/114.114.114.114
