--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34021,6 +34021,7 @@ server=/genban.org/114.114.114.114
 server=/genchim.com/114.114.114.114
 server=/gendan5.com/114.114.114.114
 server=/gendantong.com/114.114.114.114
+server=/genegeo.com/114.114.114.114
 server=/genelinkout.com/114.114.114.114
 server=/genepharma.com/114.114.114.114
 server=/general-power.com/114.114.114.114
