accelerated-domains: add guomaoreducer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36338,6 +36338,7 @@ server=/guolongplastic.com/114.114.114.114
 server=/guoluonews.com/114.114.114.114
 server=/guolv.com/114.114.114.114
 server=/guomai.cc/114.114.114.114
+server=/guomaoreducer.com/114.114.114.114
 server=/guomeijiayuanxiaoxue.com/114.114.114.114
 server=/guomeikuaidi.com/114.114.114.114
 server=/guomiaokeji.com/114.114.114.114
