accelerated-domains: add jsaeit.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51222,6 +51222,7 @@ server=/js9499.com/114.114.114.114
 server=/js96008.com/114.114.114.114
 server=/js96777.com/114.114.114.114
 server=/jsadt.com/114.114.114.114
+server=/jsaeit.com/114.114.114.114
 server=/jsahj.com/114.114.114.114
 server=/jsanbo.com/114.114.114.114
 server=/jsatcm.com/114.114.114.114
