--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51324,6 +51324,7 @@ server=/jshddx.com/114.114.114.114
 server=/jshdwh.com/114.114.114.114
 server=/jshealth.com/114.114.114.114
 server=/jshgfm.com/114.114.114.114
+server=/jshggroup.com/114.114.114.114
 server=/jshhjkjt.com/114.114.114.114
 server=/jshhzssj.com/114.114.114.114
 server=/jshkht.com/114.114.114.114
