accelerated-domains: add lvgangss.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58351,6 +58351,7 @@ server=/lve-china.com/114.114.114.114
 server=/lvfang.cc/114.114.114.114
 server=/lvfangwang.net/114.114.114.114
 server=/lvfapiao.com/114.114.114.114
+server=/lvgangss.com/114.114.114.114
 server=/lvgou.com/114.114.114.114
 server=/lvgset.com/114.114.114.114
 server=/lvguang.net/114.114.114.114
