accelerated-domains: add qqpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70439,6 +70439,7 @@ server=/qqokk.com/114.114.114.114
 server=/qqopenapp.com/114.114.114.114
 server=/qqor.com/114.114.114.114
 server=/qqpao.com/114.114.114.114
+server=/qqpharm.com/114.114.114.114
 server=/qqpifu.com/114.114.114.114
 server=/qqppt.com/114.114.114.114
 server=/qqq.tv/114.114.114.114
