--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72010,6 +72010,7 @@ server=/replicawatchsshop.cc/114.114.114.114
 server=/replicheorologio.com/114.114.114.114
 server=/repliquemontresdeluxe.fr/114.114.114.114
 server=/repliquesuisse.co/114.114.114.114
+server=/repont.com/114.114.114.114
 server=/reportify.cc/114.114.114.114
 server=/reportrc.com/114.114.114.114
 server=/reprogenix.com/114.114.114.114
