accelerated-domains: add shuangda-pump.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76292,6 +76292,7 @@ server=/shuajige.net/114.114.114.114
 server=/shuajizhijia.net/114.114.114.114
 server=/shuakazhijia.com/114.114.114.114
 server=/shuame.com/114.114.114.114
+server=/shuangda-pump.com/114.114.114.114
 server=/shuanghui.net/114.114.114.114
 server=/shuangjing.net/114.114.114.114
 server=/shuangken.com/114.114.114.114
