--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79411,6 +79411,7 @@ server=/supwisdom.com/114.114.114.114
 server=/supwk.com/114.114.114.114
 server=/suqian360.com/114.114.114.114
 server=/suqianhospital.com/114.114.114.114
+server=/suqing.com/114.114.114.114
 server=/suqishi.com/114.114.114.114
 server=/suqnn.com/114.114.114.114
 server=/surely.cool/114.114.114.114
