accelerated-domains: add suyangroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79462,6 +79462,7 @@ server=/suxieban.com/114.114.114.114
 server=/suxiege.com/114.114.114.114
 server=/suxing.me/114.114.114.114
 server=/suxx0.com/114.114.114.114
+server=/suyangroup.com/114.114.114.114
 server=/suyuantuliao.com/114.114.114.114
 server=/suyuening.com/114.114.114.114
 server=/suyugame.com/114.114.114.114
