--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82107,6 +82107,7 @@ server=/tianmunews.com/114.114.114.114
 server=/tianmupe.com/114.114.114.114
 server=/tiann90.com/114.114.114.114
 server=/tiannbo.com/114.114.114.114
+server=/tiannengcarbon.com/114.114.114.114
 server=/tianning.xyz/114.114.114.114
 server=/tianninghr.com/114.114.114.114
 server=/tiannv.com/114.114.114.114
