--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41782,6 +41782,7 @@ server=/highlionceramic.com/114.114.114.114
 server=/highlm.com/114.114.114.114
 server=/highly.cc/114.114.114.114
 server=/highsharp.com/114.114.114.114
+server=/highstar.com/114.114.114.114
 server=/hightac.com/114.114.114.114
 server=/hightopo.com/114.114.114.114
 server=/highwayguitar.com/114.114.114.114
