--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16203,6 +16203,7 @@ server=/bossgy.com/114.114.114.114
 server=/bosshr.com/114.114.114.114
 server=/bosszhipin.com/114.114.114.114
 server=/bosunman.com/114.114.114.114
+server=/botaogroup.com/114.114.114.114
 server=/botaoo.com/114.114.114.114
 server=/botaopac.com/114.114.114.114
 server=/botemotor.com/114.114.114.114
