accelerated-domains: add ecolovo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28931,6 +28931,7 @@ server=/ecodreamers.com/114.114.114.114
 server=/ecoh-china.com/114.114.114.114
 server=/ecolesenet.com/114.114.114.114
 server=/ecoliving168.com/114.114.114.114
+server=/ecolovo.com/114.114.114.114
 server=/ecom-lightapp.com/114.114.114.114
 server=/ecombdapi.com/114.114.114.114
 server=/ecombdimg.com/114.114.114.114
