accelerated-domains: add hupanoled.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44601,6 +44601,7 @@ server=/huoyuyan.com/114.114.114.114
 server=/huoziyin.com/114.114.114.114
 server=/hupan.com/114.114.114.114
 server=/hupanedu.com/114.114.114.114
+server=/hupanoled.com/114.114.114.114
 server=/hupo.com/114.114.114.114
 server=/hupo.tv/114.114.114.114
 server=/hupoogz.com/114.114.114.114
