--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51575,6 +51575,7 @@ server=/jsyks.com/114.114.114.114
 server=/jsypj.com/114.114.114.114
 server=/jsysafe.com/114.114.114.114
 server=/jsysxx.net/114.114.114.114
+server=/jsytsw.com/114.114.114.114
 server=/jsyun.cc/114.114.114.114
 server=/jsyunhao.com/114.114.114.114
 server=/jsyxjg.com/114.114.114.114
