--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55534,6 +55534,7 @@ server=/leadge.com/114.114.114.114
 server=/leading-chem.com/114.114.114.114
 server=/leadlan.com/114.114.114.114
 server=/leadmap.net/114.114.114.114
+server=/leadmicro.com/114.114.114.114
 server=/leadmoad.com/114.114.114.114
 server=/leadong.com/114.114.114.114
 server=/leadrive.com/114.114.114.114
