accelerated-domains: add yongjiezb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97343,6 +97343,7 @@ server=/yongheng.online/114.114.114.114
 server=/yongheyl.com/114.114.114.114
 server=/yonghongtech.com/114.114.114.114
 server=/yonghuivip.com/114.114.114.114
+server=/yongjiezb.com/114.114.114.114
 server=/yongjilvfeng.com/114.114.114.114
 server=/yongjindl.com/114.114.114.114
 server=/yongjx.com/114.114.114.114
