--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22468,6 +22468,7 @@ server=/cnsun.net/114.114.114.114
 server=/cnsundin.com/114.114.114.114
 server=/cnsuning.com/114.114.114.114
 server=/cnsuv.com/114.114.114.114
+server=/cnsuzi.com/114.114.114.114
 server=/cnswds.com/114.114.114.114
 server=/cnswy.net/114.114.114.114
 server=/cnsynews.com/114.114.114.114
