--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17695,6 +17695,7 @@ server=/casicloud.com/114.114.114.114
 server=/casicyber.com/114.114.114.114
 server=/caslandwood.com/114.114.114.114
 server=/caslease.com/114.114.114.114
+server=/casmeit.com/114.114.114.114
 server=/casmita.com/114.114.114.114
 server=/casmn.com/114.114.114.114
 server=/casnb.com/114.114.114.114
