accelerated-domains: add gyjs.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38672,6 +38672,7 @@ server=/gyhsz120.com/114.114.114.114
 server=/gyip.net/114.114.114.114
 server=/gyjc88.com/114.114.114.114
 server=/gyjiangyuan.com/114.114.114.114
+server=/gyjs.net/114.114.114.114
 server=/gykghb.com/114.114.114.114
 server=/gykqyy.com/114.114.114.114
 server=/gylaq.com/114.114.114.114
