--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46749,6 +46749,7 @@ server=/im5i.com/114.114.114.114
 server=/imaccn.com/114.114.114.114
 server=/imachina.com/114.114.114.114
 server=/imaegoo.com/114.114.114.114
+server=/image-tech.vip/114.114.114.114
 server=/imageaccelerate.com/114.114.114.114
 server=/imageedu.com/114.114.114.114
 server=/imagehub.cc/114.114.114.114
