--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50687,6 +50687,7 @@ server=/jlsegx.com/114.114.114.114
 server=/jlsemi.com/114.114.114.114
 server=/jlsfcyy.com/114.114.114.114
 server=/jlsjsxxw.com/114.114.114.114
+server=/jlsports.com/114.114.114.114
 server=/jlspr.com/114.114.114.114
 server=/jlsqwyy.com/114.114.114.114
 server=/jlsrc.com/114.114.114.114
