--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51245,6 +51245,7 @@ server=/jsbzwh.com/114.114.114.114
 server=/jscdn.ink/114.114.114.114
 server=/jscdwlw.com/114.114.114.114
 server=/jsceou.com/114.114.114.114
+server=/jschahua.com/114.114.114.114
 server=/jschanglong.com/114.114.114.114
 server=/jsche.net/114.114.114.114
 server=/jschunxing.com/114.114.114.114
