accelerated-domains: add shangshang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75017,6 +75017,7 @@ server=/shangque.com/114.114.114.114
 server=/shangrao-marathon.com/114.114.114.114
 server=/shangshaban.com/114.114.114.114
 server=/shangshancm.com/114.114.114.114
+server=/shangshang.com/114.114.114.114
 server=/shangshangke.me/114.114.114.114
 server=/shangshangsp.com/114.114.114.114
 server=/shangshi360.com/114.114.114.114
