--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75419,6 +75419,7 @@ server=/shengsci.com/114.114.114.114
 server=/shengshengkang.com/114.114.114.114
 server=/shengshijw.com/114.114.114.114
 server=/shengshizhicheng.com/114.114.114.114
+server=/shengtai.com/114.114.114.114
 server=/shengtangtextile.com/114.114.114.114
 server=/shengtian.com/114.114.114.114
 server=/shengtiangroup.com/114.114.114.114
