--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80772,6 +80772,7 @@ server=/taihehospital.com/114.114.114.114
 server=/taihemedia.com/114.114.114.114
 server=/taihuachem.com/114.114.114.114
 server=/taihuawj.com/114.114.114.114
+server=/taihuboiler.com/114.114.114.114
 server=/taihuoniao.com/114.114.114.114
 server=/taihuwang.com/114.114.114.114
 server=/taihuwater.com/114.114.114.114
