accelerated-domains: add wuzhong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90167,6 +90167,7 @@ server=/wuzhenwucun.com/114.114.114.114
 server=/wuzhicms.com/114.114.114.114
 server=/wuzhiq.com/114.114.114.114
 server=/wuzhiwei.net/114.114.114.114
+server=/wuzhong.com/114.114.114.114
 server=/wuzhoucj.com/114.114.114.114
 server=/wuzhoucloud.com/114.114.114.114
 server=/wuzhoudonghui.com/114.114.114.114
