accelerated-domains: add yz-xd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99414,6 +99414,7 @@ server=/yyzzsem.com/114.114.114.114
 server=/yz-iot.com/114.114.114.114
 server=/yz-proton.com/114.114.114.114
 server=/yz-show.com/114.114.114.114
+server=/yz-xd.com/114.114.114.114
 server=/yz168.cc/114.114.114.114
 server=/yz2pp.com/114.114.114.114
 server=/yz360.cc/114.114.114.114
