accelerated-domains: add shuangxingcaisu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76324,6 +76324,7 @@ server=/shuangshiyijie.com/114.114.114.114
 server=/shuangtao.com/114.114.114.114
 server=/shuangtiantech.com/114.114.114.114
 server=/shuangxian.com/114.114.114.114
+server=/shuangxingcaisu.com/114.114.114.114
 server=/shuangxinhui.com/114.114.114.114
 server=/shuangyanjie.com/114.114.114.114
 server=/shuangyingmenye.net/114.114.114.114
