accelerated-domains: add cjsic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21268,6 +21268,7 @@ server=/cjs-lwh.love/114.114.114.114
 server=/cjsc.com/114.114.114.114
 server=/cjsgegs.com/114.114.114.114
 server=/cjshipin.net/114.114.114.114
+server=/cjsic.com/114.114.114.114
 server=/cjslcg.com/114.114.114.114
 server=/cjsy.net/114.114.114.114
 server=/cjsyedu.com/114.114.114.114
