--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28516,6 +28516,7 @@ server=/e-cloudstore.com/114.114.114.114
 server=/e-cookies.net/114.114.114.114
 server=/e-cspc.com/114.114.114.114
 server=/e-cuc.com/114.114.114.114
+server=/e-elitech.com/114.114.114.114
 server=/e-eway.com/114.114.114.114
 server=/e-fangtong.com/114.114.114.114
 server=/e-flyinc.com/114.114.114.114
