--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51354,6 +51354,7 @@ server=/jshtcm.com/114.114.114.114
 server=/jshtsteel.com/114.114.114.114
 server=/jshuachen.com/114.114.114.114
 server=/jshuafu.com/114.114.114.114
+server=/jshuanya.com/114.114.114.114
 server=/jshuitian.com/114.114.114.114
 server=/jshy.com/114.114.114.114
 server=/jshy1688.com/114.114.114.114
