accelerated-domains: add sanzer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73426,6 +73426,7 @@ server=/sanzangwang.com/114.114.114.114
 server=/sanzanhotel.com/114.114.114.114
 server=/sanzao.xyz/114.114.114.114
 server=/sanzei.com/114.114.114.114
+server=/sanzer.com/114.114.114.114
 server=/sanzhimeihua.com/114.114.114.114
 server=/sanzinfo.com/114.114.114.114
 server=/sao-ma.com/114.114.114.114
