--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89160,6 +89160,7 @@ server=/wltieyaoban.com/114.114.114.114
 server=/wluotx.com/114.114.114.114
 server=/wlw-jcdlcxzx.com/114.114.114.114
 server=/wlwj.com/114.114.114.114
+server=/wlwltech.com/114.114.114.114
 server=/wlwx.com/114.114.114.114
 server=/wlwx.la/114.114.114.114
 server=/wlwx.org/114.114.114.114
