--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49225,6 +49225,7 @@ server=/jiangshi99.com/114.114.114.114
 server=/jiangsugqt.org/114.114.114.114
 server=/jiangsugwy.org/114.114.114.114
 server=/jiangsukj.com/114.114.114.114
+server=/jiangsulvhe.com/114.114.114.114
 server=/jiangsumobile.com/114.114.114.114
 server=/jiangsurc.com/114.114.114.114
 server=/jiangsuzhongpin.com/114.114.114.114
