--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50826,6 +50826,7 @@ server=/jngaobo.com/114.114.114.114
 server=/jnghm.com/114.114.114.114
 server=/jngjj.net/114.114.114.114
 server=/jngl.net/114.114.114.114
+server=/jnhb.com/114.114.114.114
 server=/jnhfsl.com/114.114.114.114
 server=/jnhongyun9.com/114.114.114.114
 server=/jnhouse.com/114.114.114.114
