--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68426,6 +68426,7 @@ server=/pr027.com/114.114.114.114
 server=/pr0771.com/114.114.114.114
 server=/pr1bg.com/114.114.114.114
 server=/pradabao.com/114.114.114.114
+server=/pratic-cnc.com/114.114.114.114
 server=/prcedu.com/114.114.114.114
 server=/prcee.org/114.114.114.114
 server=/prcvalve.com/114.114.114.114
