--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28427,6 +28427,7 @@ server=/dzdiy.com/114.114.114.114
 server=/dzdnb.com/114.114.114.114
 server=/dzdu.com/114.114.114.114
 server=/dzdvip.com/114.114.114.114
+server=/dzemotor.com/114.114.114.114
 server=/dzfc.com/114.114.114.114
 server=/dzfjsm.com/114.114.114.114
 server=/dzfwjd.com/114.114.114.114
