--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42755,6 +42755,7 @@ server=/hongcesys.com/114.114.114.114
 server=/hongchangpawn.com/114.114.114.114
 server=/hongchisw.com/114.114.114.114
 server=/hongda-steeltube.com/114.114.114.114
+server=/hongdamach.com/114.114.114.114
 server=/hongdatec.com/114.114.114.114
 server=/hongdaym.com/114.114.114.114
 server=/hongdefund.com/114.114.114.114
