--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45272,6 +45272,7 @@ server=/hzkayo.com/114.114.114.114
 server=/hzkcck.com/114.114.114.114
 server=/hzkemengda.com/114.114.114.114
 server=/hzkesheng.com/114.114.114.114
+server=/hzkjgf.com/114.114.114.114
 server=/hzkjn.com/114.114.114.114
 server=/hzkln.com/114.114.114.114
 server=/hzklyy.com/114.114.114.114
