--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51254,6 +51254,7 @@ server=/jsbgj.com/114.114.114.114
 server=/jsbzwh.com/114.114.114.114
 server=/jscdn.ink/114.114.114.114
 server=/jscdwlw.com/114.114.114.114
+server=/jscelltech.com/114.114.114.114
 server=/jsceou.com/114.114.114.114
 server=/jschahua.com/114.114.114.114
 server=/jschanglong.com/114.114.114.114
