--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51435,6 +51435,7 @@ server=/jsnjck.com/114.114.114.114
 server=/jsnjjg.com/114.114.114.114
 server=/jsnol.com/114.114.114.114
 server=/jsnovel.com/114.114.114.114
+server=/jsntg.com/114.114.114.114
 server=/jsntgas.com/114.114.114.114
 server=/jsntzsgs.com/114.114.114.114
 server=/jsnx.net/114.114.114.114
