--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55407,6 +55407,7 @@ server=/lcboai.com/114.114.114.114
 server=/lcbtv.com/114.114.114.114
 server=/lccareer.com/114.114.114.114
 server=/lccdn.net/114.114.114.114
+server=/lcchem.com/114.114.114.114
 server=/lcchgg.com/114.114.114.114
 server=/lccmw.com/114.114.114.114
 server=/lccyy.com/114.114.114.114
