accelerated-domains: add linhaigroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56685,6 +56685,7 @@ server=/lingzhanwenhua.com/114.114.114.114
 server=/lingzhilab.com/114.114.114.114
 server=/lingzhitech.com/114.114.114.114
 server=/lingzhtech.com/114.114.114.114
+server=/linhaigroup.com/114.114.114.114
 server=/linhaiwangdai.com/114.114.114.114
 server=/linhuatz.com/114.114.114.114
 server=/linhuiba.com/114.114.114.114
