--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80820,6 +80820,7 @@ server=/taikr.com/114.114.114.114
 server=/tailixiangjiao.com/114.114.114.114
 server=/tailixlq.com/114.114.114.114
 server=/taillkang.com/114.114.114.114
+server=/tailong.com/114.114.114.114
 server=/taimi100.com/114.114.114.114
 server=/taimls.com/114.114.114.114
 server=/tainengchong.com/114.114.114.114
