--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83010,6 +83010,7 @@ server=/tongxinteng.com/114.114.114.114
 server=/tongxiong.com/114.114.114.114
 server=/tongxue.com/114.114.114.114
 server=/tongxue365.com/114.114.114.114
+server=/tongyangship.com/114.114.114.114
 server=/tongyaoplay.com/114.114.114.114
 server=/tongyavisa.com/114.114.114.114
 server=/tongye.biz/114.114.114.114
