accelerated-domains: add wzwansen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90595,6 +90595,7 @@ server=/wztlink1013.com/114.114.114.114
 server=/wztsy.com/114.114.114.114
 server=/wzty.ltd/114.114.114.114
 server=/wzu.com/114.114.114.114
+server=/wzwansen.com/114.114.114.114
 server=/wzweisen.com/114.114.114.114
 server=/wzwmw.com/114.114.114.114
 server=/wzwqs.com/114.114.114.114
