accelerated-domains: add eastmab.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28699,6 +28699,7 @@ server=/eastjq.com/114.114.114.114
 server=/eastled.com/114.114.114.114
 server=/eastlen.com/114.114.114.114
 server=/eastlending.com/114.114.114.114
+server=/eastmab.com/114.114.114.114
 server=/eastmannplastics.com/114.114.114.114
 server=/eastmarathon.com/114.114.114.114
 server=/eastmoney.com/114.114.114.114
