--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51491,6 +51491,7 @@ server=/jsscsj.com/114.114.114.114
 server=/jssddz.com/114.114.114.114
 server=/jssdezyy.com/114.114.114.114
 server=/jssdh.com/114.114.114.114
+server=/jssfgl.com/114.114.114.114
 server=/jssfx.com/114.114.114.114
 server=/jssgjjt.com/114.114.114.114
 server=/jsshfcw.com/114.114.114.114
