--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57259,6 +57259,7 @@ server=/ljwit.com/114.114.114.114
 server=/ljwlz.com/114.114.114.114
 server=/ljxww.com/114.114.114.114
 server=/ljzfin.com/114.114.114.114
+server=/lk-jd.com/114.114.114.114
 server=/lk361.com/114.114.114.114
 server=/lkalpos.com/114.114.114.114
 server=/lkblog.net/114.114.114.114
