--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63762,6 +63762,7 @@ server=/nhnexpo.com/114.114.114.114
 server=/nhnst.com/114.114.114.114
 server=/nhooo.com/114.114.114.114
 server=/nhspd.com/114.114.114.114
+server=/nhwa-group.com/114.114.114.114
 server=/nhxz.com/114.114.114.114
 server=/nhygkj.com/114.114.114.114
 server=/nhywvr.com/114.114.114.114
