--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78462,6 +78462,7 @@ server=/springboot.io/114.114.114.114
 server=/springcocoon.com/114.114.114.114
 server=/springpharma.net/114.114.114.114
 server=/springtour.com/114.114.114.114
+server=/sprint-tech.com/114.114.114.114
 server=/sprixin.com/114.114.114.114
 server=/spsb114.com/114.114.114.114
 server=/spsy.org/114.114.114.114
