accelerated-domains: add jshtocean.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51359,6 +51359,7 @@ server=/jshrconsult.com/114.114.114.114
 server=/jshrtfl.com/114.114.114.114
 server=/jshsoft.com/114.114.114.114
 server=/jshtcm.com/114.114.114.114
+server=/jshtocean.com/114.114.114.114
 server=/jshtsteel.com/114.114.114.114
 server=/jshuachen.com/114.114.114.114
 server=/jshuafu.com/114.114.114.114
