accelerated-domains: add cnpot.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22380,6 +22380,7 @@ server=/cnplugins.com/114.114.114.114
 server=/cnpmjs.org/114.114.114.114
 server=/cnpoli.com/114.114.114.114
 server=/cnponer.com/114.114.114.114
+server=/cnpot.com/114.114.114.114
 server=/cnpou.com/114.114.114.114
 server=/cnpowdernet.com/114.114.114.114
 server=/cnpowdertech.com/114.114.114.114
