--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51515,6 +51515,7 @@ server=/jssytc.com/114.114.114.114
 server=/jstfdz.com/114.114.114.114
 server=/jsthinktank.com/114.114.114.114
 server=/jsthjsgc.com/114.114.114.114
+server=/jstianniao.com/114.114.114.114
 server=/jstide.com/114.114.114.114
 server=/jstlcyy.com/114.114.114.114
 server=/jstlgn.com/114.114.114.114
