accelerated-domains: add kesheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53247,6 +53247,7 @@ server=/keruyun.com/114.114.114.114
 server=/keruyun.net/114.114.114.114
 server=/keryt111.fun/114.114.114.114
 server=/kesci.com/114.114.114.114
+server=/kesheng.com/114.114.114.114
 server=/keshenwei.com/114.114.114.114
 server=/keshizhongguo.com/114.114.114.114
 server=/kesion.com/114.114.114.114
