accelerated-domains: add lihuamuye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56475,6 +56475,7 @@ server=/lihtao.com/114.114.114.114
 server=/lihua.com/114.114.114.114
 server=/lihuadicn.com/114.114.114.114
 server=/lihuadonghua.com/114.114.114.114
+server=/lihuamuye.com/114.114.114.114
 server=/lihuasoft.net/114.114.114.114
 server=/lihui.net/114.114.114.114
 server=/lihuia.com/114.114.114.114
