--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69780,6 +69780,7 @@ server=/qinde.net/114.114.114.114
 server=/qineasy.com/114.114.114.114
 server=/qinengdongfang.com/114.114.114.114
 server=/qiner520.com/114.114.114.114
+server=/qinfenpharm.com/114.114.114.114
 server=/qing-shan.com/114.114.114.114
 server=/qing-tian.com/114.114.114.114
 server=/qing.me/114.114.114.114
