--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78384,6 +78384,7 @@ server=/spbycdn.com/114.114.114.114
 server=/spbycdn.info/114.114.114.114
 server=/spcapsules.com/114.114.114.114
 server=/spcc-cn.com/114.114.114.114
+server=/spcc-silk.com/114.114.114.114
 server=/spccmc.com/114.114.114.114
 server=/spcdntip.com/114.114.114.114
 server=/spcywang.com/114.114.114.114
