--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78734,6 +78734,7 @@ server=/st12121.net/114.114.114.114
 server=/st123.com/114.114.114.114
 server=/st123.info/114.114.114.114
 server=/st180.com/114.114.114.114
+server=/stacf.com/114.114.114.114
 server=/stackboom.xin/114.114.114.114
 server=/stackcc.com/114.114.114.114
 server=/stackoom.com/114.114.114.114
