accelerated-domains: add tds-1300.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81426,6 +81426,7 @@ server=/tdnsx1.com/114.114.114.114
 server=/tdotapp.com/114.114.114.114
 server=/tdpress.com/114.114.114.114
 server=/tdrffh.com/114.114.114.114
+server=/tds-1300.com/114.114.114.114
 server=/tdshbao.com/114.114.114.114
 server=/tdsjbj.com/114.114.114.114
 server=/tdtbd.com/114.114.114.114
