accelerated-domains: add worldnyjx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89547,6 +89547,7 @@ server=/worldhub.market/114.114.114.114
 server=/worldinout.com/114.114.114.114
 server=/worldjiasu.com/114.114.114.114
 server=/worldmr.net/114.114.114.114
+server=/worldnyjx.com/114.114.114.114
 server=/worldofmeetings.com/114.114.114.114
 server=/worldpathclinic.com/114.114.114.114
 server=/worldpointinc.com/114.114.114.114
