--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96926,6 +96926,7 @@ server=/yjzb.app/114.114.114.114
 server=/yjzb.tv/114.114.114.114
 server=/yjzcalzcxm.com/114.114.114.114
 server=/yjzf.com/114.114.114.114
+server=/yk-bio.com/114.114.114.114
 server=/yk211.com/114.114.114.114
 server=/ykai.com/114.114.114.114
 server=/ykccn.com/114.114.114.114
