--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51579,6 +51579,7 @@ server=/jsxkxc.com/114.114.114.114
 server=/jsxlhb.com/114.114.114.114
 server=/jsxmw.com/114.114.114.114
 server=/jsxpbc.com/114.114.114.114
+server=/jsxtsw.com/114.114.114.114
 server=/jsxxzh.com/114.114.114.114
 server=/jsxy.biz/114.114.114.114
 server=/jsxyfy.com/114.114.114.114
