accelerated-domains: add ningban.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63902,6 +63902,7 @@ server=/ninestarmall.com/114.114.114.114
 server=/ninetylab.com/114.114.114.114
 server=/nineya.com/114.114.114.114
 server=/ning0370.com/114.114.114.114
+server=/ningban.com/114.114.114.114
 server=/ningbo-airport.com/114.114.114.114
 server=/ningbocat.com/114.114.114.114
 server=/ningbofy.com/114.114.114.114
