accelerated-domains: add wxlongda.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90382,6 +90382,7 @@ server=/wxkml.com/114.114.114.114
 server=/wxlagame.com/114.114.114.114
 server=/wxlele.com/114.114.114.114
 server=/wxlivecdn.com/114.114.114.114
+server=/wxlongda.com/114.114.114.114
 server=/wxlongre.com/114.114.114.114
 server=/wxlpool.com/114.114.114.114
 server=/wxlydhb.com/114.114.114.114
