accelerated-domains: add xvacuum.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94413,6 +94413,7 @@ server=/xuzhounano.com/114.114.114.114
 server=/xuzhousports.com/114.114.114.114
 server=/xuzhouwater.com/114.114.114.114
 server=/xv5.com/114.114.114.114
+server=/xvacuum.com/114.114.114.114
 server=/xvcdmo.com/114.114.114.114
 server=/xvideo.cc/114.114.114.114
 server=/xvista.com/114.114.114.114
