accelerated-domains: add js-cct.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51220,6 +51220,7 @@ server=/jrzj.com/114.114.114.114
 server=/jrzp.com/114.114.114.114
 server=/jrzyzs.com/114.114.114.114
 server=/js-aerfa.com/114.114.114.114
+server=/js-cct.com/114.114.114.114
 server=/js-fangyuan.com/114.114.114.114
 server=/js-jinhua.com/114.114.114.114
 server=/js-jwt.com/114.114.114.114
