accelerated-domains: add sunera-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79244,6 +79244,7 @@ server=/sunear.net/114.114.114.114
 server=/sunease.net/114.114.114.114
 server=/sunemc.com/114.114.114.114
 server=/suner.cc/114.114.114.114
+server=/sunera-cn.com/114.114.114.114
 server=/sunergyworks.com/114.114.114.114
 server=/sunfounder.cc/114.114.114.114
 server=/sunfront.com/114.114.114.114
