accelerated-domains: add ctiecep.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23895,6 +23895,7 @@ server=/cthuwork.net/114.114.114.114
 server=/cthy.com/114.114.114.114
 server=/cti-cert.com/114.114.114.114
 server=/ctibet.com/114.114.114.114
+server=/ctiecep.com/114.114.114.114
 server=/ctiforum.com/114.114.114.114
 server=/ctiku.com/114.114.114.114
 server=/ctils.com/114.114.114.114
