accelerated-domains: add huizhioptech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44401,6 +44401,7 @@ server=/huizhijiesz.com/114.114.114.114
 server=/huizhilin.com/114.114.114.114
 server=/huizhilin.net/114.114.114.114
 server=/huizhimob.com/114.114.114.114
+server=/huizhioptech.com/114.114.114.114
 server=/huizhouf.com/114.114.114.114
 server=/huiziyuan.net/114.114.114.114
 server=/huizone.com/114.114.114.114
