--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51457,6 +51457,7 @@ server=/jsp158.com/114.114.114.114
 server=/jsp51.com/114.114.114.114
 server=/jspang.com/114.114.114.114
 server=/jspatch.com/114.114.114.114
+server=/jspcinc.com/114.114.114.114
 server=/jspdg.com/114.114.114.114
 server=/jspeople.com/114.114.114.114
 server=/jspesz.com/114.114.114.114
