--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54113,6 +54113,7 @@ server=/ksyunv7.com/114.114.114.114
 server=/ksyunwaf.com/114.114.114.114
 server=/ksyxmc.com/114.114.114.114
 server=/kszhuanjia.com/114.114.114.114
+server=/kszlzz.com/114.114.114.114
 server=/kszpw.com/114.114.114.114
 server=/kt007.com/114.114.114.114
 server=/kt286.com/114.114.114.114
