accelerated-domains: add marazziguide.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59564,6 +59564,7 @@ server=/maqinnews.com/114.114.114.114
 server=/mararun.com/114.114.114.114
 server=/marathonbm.com/114.114.114.114
 server=/marathonchangsha.com/114.114.114.114
+server=/marazziguide.com/114.114.114.114
 server=/marchinfo.com/114.114.114.114
 server=/marco-bj.com/114.114.114.114
 server=/marcopolochina.com/114.114.114.114
