--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79586,6 +79586,7 @@ server=/swanpowerstrip.com/114.114.114.114
 server=/swaqds.com/114.114.114.114
 server=/swarma.net/114.114.114.114
 server=/swarma.org/114.114.114.114
+server=/swat-js.com/114.114.114.114
 server=/swatou.com/114.114.114.114
 server=/swbbsc.com/114.114.114.114
 server=/swc-china.com/114.114.114.114
