accelerated-domains: add xinrui-pharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92630,6 +92630,7 @@ server=/xinri.com/114.114.114.114
 server=/xinrong88.com/114.114.114.114
 server=/xinrongshiying.com/114.114.114.114
 server=/xinrui-games.com/114.114.114.114
+server=/xinrui-pharm.com/114.114.114.114
 server=/xinrui.biz/114.114.114.114
 server=/xinruipiao.com/114.114.114.114
 server=/xinruiweb.com/114.114.114.114
