--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102804,6 +102804,7 @@ server=/zooioo.com/114.114.114.114
 server=/zookingsoft.com/114.114.114.114
 server=/zookparts.com/114.114.114.114
 #server=/zoom.us/114.114.114.114 # Disabled: https://github.com/felixonmars/dnsmasq-china-list/issues/29
+server=/zoolnasm.com/114.114.114.114
 server=/zoomad.net/114.114.114.114
 server=/zoomerstudio.com/114.114.114.114
 server=/zoomeye.org/114.114.114.114
