--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103374,6 +103374,7 @@ server=/zwcad.com/114.114.114.114
 server=/zwcctv.com/114.114.114.114
 server=/zwcnw.com/114.114.114.114
 server=/zwcsm.com/114.114.114.114
+server=/zwcuo.com/114.114.114.114
 server=/zwda.com/114.114.114.114
 server=/zwdn.com/114.114.114.114
 server=/zwdns.com/114.114.114.114
