--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53257,6 +53257,7 @@ server=/keshenwei.com/114.114.114.114
 server=/keshizhongguo.com/114.114.114.114
 server=/kesion.com/114.114.114.114
 server=/kesiyunlai.com/114.114.114.114
+server=/kesonco.com/114.114.114.114
 server=/kesong.co/114.114.114.114
 server=/kesong520.com/114.114.114.114
 server=/kesonic.com/114.114.114.114
