accelerated-domains: add beiren-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14072,6 +14072,7 @@ server=/beingmate.com/114.114.114.114
 server=/beipy.com/114.114.114.114
 server=/beiqujy.com/114.114.114.114
 server=/beirangroup.com/114.114.114.114
+server=/beiren-tech.com/114.114.114.114
 server=/beiren.cc/114.114.114.114
 server=/beiren.com/114.114.114.114
 server=/beirunjie.com/114.114.114.114
