--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51578,6 +51578,7 @@ server=/jsxhy.net/114.114.114.114
 server=/jsxiangtanzi.com/114.114.114.114
 server=/jsxiaoguo.com/114.114.114.114
 server=/jsxiaoshi.com/114.114.114.114
+server=/jsxiechang.com/114.114.114.114
 server=/jsxinfeng.com/114.114.114.114
 server=/jsxinfly.com/114.114.114.114
 server=/jsxionghuojxzz.com/114.114.114.114
