accelerated-domains: add jywfgg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52404,6 +52404,7 @@ server=/jytjw.com/114.114.114.114
 server=/jytrump.com/114.114.114.114
 server=/jytwp.com/114.114.114.114
 server=/jywanrun.com/114.114.114.114
+server=/jywfgg.com/114.114.114.114
 server=/jywlcm.com/114.114.114.114
 server=/jywmgs.com/114.114.114.114
 server=/jywxq.com/114.114.114.114
