accelerated-domains: add quartzhy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70767,6 +70767,7 @@ server=/quanziapp.com/114.114.114.114
 server=/quaolai.com/114.114.114.114
 server=/quarkbook.com/114.114.114.114
 server=/quarkers.com/114.114.114.114
+server=/quartzhy.com/114.114.114.114
 server=/quasarchs.com/114.114.114.114
 server=/quatanthu.club/114.114.114.114
 server=/quatanthu.fun/114.114.114.114
