--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51225,6 +51225,7 @@ server=/jrzyzs.com/114.114.114.114
 server=/js-aerfa.com/114.114.114.114
 server=/js-cct.com/114.114.114.114
 server=/js-fangyuan.com/114.114.114.114
+server=/js-gojo.com/114.114.114.114
 server=/js-jiatai.com/114.114.114.114
 server=/js-jinhua.com/114.114.114.114
 server=/js-jwt.com/114.114.114.114
