accelerated-domains: add jswukong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51558,6 +51558,7 @@ server=/jswrhjkj.com/114.114.114.114
 server=/jswspocapi.com/114.114.114.114
 server=/jswsxx.com/114.114.114.114
 server=/jswtc.net/114.114.114.114
+server=/jswukong.com/114.114.114.114
 server=/jswwl.com/114.114.114.114
 server=/jswxhy.com/114.114.114.114
 server=/jswxmax.com/114.114.114.114
