accelerated-domains: add jy-sz.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52300,6 +52300,7 @@ server=/jxzyx.com/114.114.114.114
 server=/jy-dengju.com/114.114.114.114
 server=/jy-fuhao.com/114.114.114.114
 server=/jy-mach.com/114.114.114.114
+server=/jy-sz.net/114.114.114.114
 server=/jy.cc/114.114.114.114
 server=/jy0604.com/114.114.114.114
 server=/jy0832.com/114.114.114.114
