accelerated-domains: add lhpharma.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56149,6 +56149,7 @@ server=/lhmp.cc/114.114.114.114
 server=/lhnic.com/114.114.114.114
 server=/lhp-cdn-game.online/114.114.114.114
 server=/lhp-cdn-update.online/114.114.114.114
+server=/lhpharma.com/114.114.114.114
 server=/lhratings.com/114.114.114.114
 server=/lhrbszb.com/114.114.114.114
 server=/lhrlzyw.com/114.114.114.114
