accelerated-domains: add global-tio2.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34804,6 +34804,7 @@ server=/global-jf.com/114.114.114.114
 server=/global-ks-cdn.com/114.114.114.114
 server=/global-leader.com/114.114.114.114
 server=/global-scsl.com/114.114.114.114
+server=/global-tio2.com/114.114.114.114
 server=/global-trade-center.com/114.114.114.114
 server=/global56.com/114.114.114.114
 server=/globalaccentchinese.com/114.114.114.114
