--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51294,6 +51294,7 @@ server=/jsddz.net/114.114.114.114
 server=/jsdesign1.com/114.114.114.114
 server=/jsdesoft.com/114.114.114.114
 server=/jsdgb.com/114.114.114.114
+server=/jsdhjssyjt.com/114.114.114.114
 server=/jsdjwood.com/114.114.114.114
 server=/jsdmirror.com/114.114.114.114
 server=/jsdrc.com/114.114.114.114
