accelerated-domains: add jswcc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51547,6 +51547,7 @@ server=/jsw118.com/114.114.114.114
 server=/jsw988.com/114.114.114.114
 server=/jswater.net/114.114.114.114
 server=/jswb.com/114.114.114.114
+server=/jswcc.com/114.114.114.114
 server=/jswch.net/114.114.114.114
 server=/jswebcall.com/114.114.114.114
 server=/jsweixiu.com/114.114.114.114
