accelerated-domains: add sinohsc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77081,6 +77081,7 @@ server=/sinogt.com/114.114.114.114
 server=/sinohb.com/114.114.114.114
 server=/sinohotel.com/114.114.114.114
 server=/sinohowe.com/114.114.114.114
+server=/sinohsc.com/114.114.114.114
 server=/sinohx.com/114.114.114.114
 server=/sinohydro.com/114.114.114.114
 server=/sinoid.com/114.114.114.114
