accelerated-domains: add wllxcl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89194,6 +89194,7 @@ server=/wlkgo.com/114.114.114.114
 server=/wlkst.com/114.114.114.114
 server=/wlku.com/114.114.114.114
 server=/wll-xyz.com/114.114.114.114
+server=/wllxcl.com/114.114.114.114
 server=/wllxx.com/114.114.114.114
 server=/wlmcz.com/114.114.114.114
 server=/wlmq.com/114.114.114.114
