accelerated-domains: add hxgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44820,6 +44820,7 @@ server=/hxfjw.com/114.114.114.114
 server=/hxgame.net/114.114.114.114
 server=/hxgqw.com/114.114.114.114
 server=/hxgroup.com/114.114.114.114
+server=/hxgs.com/114.114.114.114
 server=/hxgs.net/114.114.114.114
 server=/hxgwott.com/114.114.114.114
 server=/hxhaoyu.com/114.114.114.114
