accelerated-domains: add totainfo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83229,6 +83229,7 @@ server=/tospur.com/114.114.114.114
 server=/tosstar5117.com/114.114.114.114
 server=/tosuai.com/114.114.114.114
 server=/tosunk.com/114.114.114.114
+server=/totainfo.com/114.114.114.114
 server=/totalacg.com/114.114.114.114
 server=/totenchina.com/114.114.114.114
 server=/totiot.com/114.114.114.114
