--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103117,6 +103117,7 @@ server=/zt-job.com/114.114.114.114
 server=/zt0729.xyz/114.114.114.114
 server=/zt1388.com/114.114.114.114
 server=/zt1f.com/114.114.114.114
+server=/zt24j.com/114.114.114.114
 server=/ztautoparts.com/114.114.114.114
 server=/ztbeijixing.com/114.114.114.114
 server=/ztbest.com/114.114.114.114
