accelerated-domains: add dongqiang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27275,6 +27275,7 @@ server=/dongnienglish.com/114.114.114.114
 server=/dongniyingyu.com/114.114.114.114
 server=/dongpeng.net/114.114.114.114
 server=/dongputech.com/114.114.114.114
+server=/dongqiang.com/114.114.114.114
 server=/dongqiniqin.com/114.114.114.114
 server=/dongqiudi.com/114.114.114.114
 server=/dongqiudi.net/114.114.114.114
