--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51351,6 +51351,7 @@ server=/jsgyrcb.com/114.114.114.114
 server=/jsh.com/114.114.114.114
 server=/jshaman.com/114.114.114.114
 server=/jshanchao.com/114.114.114.114
+server=/jshaorungroup.com/114.114.114.114
 server=/jsharer.com/114.114.114.114
 server=/jshbank.com/114.114.114.114
 server=/jshcsoft.com/114.114.114.114
