--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25129,6 +25129,7 @@ server=/datasheet.hk/114.114.114.114
 server=/datasheet5.com/114.114.114.114
 server=/datastoragesummit.com/114.114.114.114
 server=/datatang.com/114.114.114.114
+server=/datatech-info.com/114.114.114.114
 server=/datatech.wang/114.114.114.114
 server=/datatist.com/114.114.114.114
 server=/datatocn.com/114.114.114.114
