--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31918,6 +31918,7 @@ server=/fl168.com/114.114.114.114
 server=/fl365.com/114.114.114.114
 server=/fl5.co/114.114.114.114
 server=/fl580.com/114.114.114.114
+server=/flagchem.com/114.114.114.114
 server=/flamecdn.com/114.114.114.114
 server=/flamesky.org/114.114.114.114
 server=/flamingcold.com/114.114.114.114
