--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35824,6 +35824,7 @@ server=/gtgres.com/114.114.114.114
 server=/gthzc.com/114.114.114.114
 server=/gti56.com/114.114.114.114
 server=/gtibee.com/114.114.114.114
+server=/gtig-esen.com/114.114.114.114
 server=/gtig.com/114.114.114.114
 server=/gtiggm.com/114.114.114.114
 server=/gtimg.com/114.114.114.114
