--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51259,6 +51259,7 @@ server=/jsadt.com/114.114.114.114
 server=/jsaeit.com/114.114.114.114
 server=/jsahj.com/114.114.114.114
 server=/jsanbo.com/114.114.114.114
+server=/jsarchi.com/114.114.114.114
 server=/jsatcm.com/114.114.114.114
 server=/jsbaidu.com/114.114.114.114
 server=/jsballs.com/114.114.114.114
