accelerated-domains: add jshcxn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51359,6 +51359,7 @@ server=/jshaorungroup.com/114.114.114.114
 server=/jsharer.com/114.114.114.114
 server=/jshbank.com/114.114.114.114
 server=/jshcsoft.com/114.114.114.114
+server=/jshcxn.com/114.114.114.114
 server=/jshdata.com/114.114.114.114
 server=/jshddx.com/114.114.114.114
 server=/jshdwh.com/114.114.114.114
