--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51405,6 +51405,7 @@ server=/jsjinfu.com/114.114.114.114
 server=/jsjj120.com/114.114.114.114
 server=/jsjjy.com/114.114.114.114
 server=/jsjkx.com/114.114.114.114
+server=/jsjkzx.com/114.114.114.114
 server=/jsjljy.com/114.114.114.114
 server=/jsjnsw.com/114.114.114.114
 server=/jsjnw.org/114.114.114.114
