--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51415,6 +51415,7 @@ server=/jsjslk.com/114.114.114.114
 server=/jsjtxx.com/114.114.114.114
 server=/jsjxh03.com/114.114.114.114
 server=/jsjyrcb.com/114.114.114.114
+server=/jsjzd.com/114.114.114.114
 server=/jsk365.com/114.114.114.114
 server=/jskale.com/114.114.114.114
 server=/jskchem.com/114.114.114.114
