--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51529,6 +51529,7 @@ server=/jsstyt.com/114.114.114.114
 server=/jssunlord.com/114.114.114.114
 server=/jssutong.com/114.114.114.114
 server=/jssuty.com/114.114.114.114
+server=/jssuwei.com/114.114.114.114
 server=/jsswordshop.com/114.114.114.114
 server=/jssylawfirm.com/114.114.114.114
 server=/jssytc.com/114.114.114.114
