accelerated-domains: add kelikt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53202,6 +53202,7 @@ server=/keleqiu.com/114.114.114.114
 server=/kelete.com/114.114.114.114
 server=/keliangtek.com/114.114.114.114
 server=/kelibiao.com/114.114.114.114
+server=/kelikt.com/114.114.114.114
 server=/kelilens.com/114.114.114.114
 server=/kelimotor.com/114.114.114.114
 server=/kelinpower.com/114.114.114.114
