accelerated-domains: add libiotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56348,6 +56348,7 @@ server=/liberlive-music.com/114.114.114.114
 server=/libertynlp.com/114.114.114.114
 server=/libforest.com/114.114.114.114
 server=/libinx.com/114.114.114.114
+server=/libiotech.com/114.114.114.114
 server=/libisky.com/114.114.114.114
 server=/liblib.art/114.114.114.114
 server=/liblib.cloud/114.114.114.114
