accelerated-domains: add mtjiangsu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62210,6 +62210,7 @@ server=/mtime.com/114.114.114.114
 server=/mtimg.net/114.114.114.114
 server=/mting.info/114.114.114.114
 server=/mtizt.com/114.114.114.114
+server=/mtjiangsu.com/114.114.114.114
 server=/mtk.com.tw/114.114.114.114
 server=/mtkdy.com/114.114.114.114
 server=/mtketang.com/114.114.114.114
