accelerated-domains: add sushui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79531,6 +79531,7 @@ server=/surwit.com/114.114.114.114
 server=/suseage.com/114.114.114.114
 server=/sushijiameng.com/114.114.114.114
 server=/sushiyanglao.com/114.114.114.114
+server=/sushui.com/114.114.114.114
 server=/susong51.com/114.114.114.114
 server=/susongbbs.com/114.114.114.114
 server=/susoul.com/114.114.114.114
