--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92339,6 +92339,7 @@ server=/xincheping.com/114.114.114.114
 server=/xinchess.com/114.114.114.114
 server=/xinchong.com/114.114.114.114
 server=/xinchukj.com/114.114.114.114
+server=/xincj.com/114.114.114.114
 server=/xincloudhost.com/114.114.114.114
 server=/xincmm.com/114.114.114.114
 server=/xinda-bio.com/114.114.114.114
