accelerated-domains: add yuedainvest.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98462,6 +98462,7 @@ server=/yuebooemt.com/114.114.114.114
 server=/yuecdn.net/114.114.114.114
 server=/yuecheng.com/114.114.114.114
 server=/yuecong.club/114.114.114.114
+server=/yuedainvest.com/114.114.114.114
 server=/yuedaoec.com/114.114.114.114
 server=/yuedianedu.com/114.114.114.114
 server=/yuedisk.com/114.114.114.114
