--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98658,6 +98658,7 @@ server=/yulinjue.com/114.114.114.114
 server=/yulinqj.com/114.114.114.114
 server=/yulinshidefu.com/114.114.114.114
 server=/yulinyw.com/114.114.114.114
+server=/yuliqx.com/114.114.114.114
 server=/yulongdt.com/114.114.114.114
 server=/yulongjun.com/114.114.114.114
 server=/yulongsteelpipe.com/114.114.114.114
