--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42743,6 +42743,7 @@ server=/homolo.net/114.114.114.114
 server=/homsuncap.com/114.114.114.114
 server=/homylogistics.com/114.114.114.114
 server=/homyu.com/114.114.114.114
+server=/honaenergy.com/114.114.114.114
 server=/honco88.com/114.114.114.114
 server=/honda-sundiro.com/114.114.114.114
 server=/hondugroup.com/114.114.114.114
