accelerated-domains: add joyanglab.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51050,6 +51050,7 @@ server=/joy110.com/114.114.114.114
 server=/joy5151.com/114.114.114.114
 server=/joyact.com/114.114.114.114
 server=/joyami.com/114.114.114.114
+server=/joyanglab.com/114.114.114.114
 server=/joyapi.com/114.114.114.114
 server=/joydin.com/114.114.114.114
 server=/joyes.com/114.114.114.114
