accelerated-domains: add js-leader.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51237,6 +51237,7 @@ server=/js-gojo.com/114.114.114.114
 server=/js-jiatai.com/114.114.114.114
 server=/js-jinhua.com/114.114.114.114
 server=/js-jwt.com/114.114.114.114
+server=/js-leader.com/114.114.114.114
 server=/js-lottery.com/114.114.114.114
 server=/js-powerstone.com/114.114.114.114
 server=/js-rongzheng.com/114.114.114.114
