accelerated-domains: add jsessh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51320,6 +51320,7 @@ server=/jsenews.com/114.114.114.114
 server=/jseoptics.com/114.114.114.114
 server=/jsep.com/114.114.114.114
 server=/jser.io/114.114.114.114
+server=/jsessh.com/114.114.114.114
 server=/jsexpressway.com/114.114.114.114
 server=/jsf666.com/114.114.114.114
 server=/jsfj.net/114.114.114.114
