--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51373,6 +51373,7 @@ server=/jshggroup.com/114.114.114.114
 server=/jshhjkjt.com/114.114.114.114
 server=/jshhzssj.com/114.114.114.114
 server=/jshkht.com/114.114.114.114
+server=/jshlfd.com/114.114.114.114
 server=/jshmrcb.com/114.114.114.114
 server=/jshnh.com/114.114.114.114
 server=/jshqjt.com/114.114.114.114
