accelerated-domains: add jsti.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51541,6 +51541,7 @@ server=/jssytc.com/114.114.114.114
 server=/jstfdz.com/114.114.114.114
 server=/jsthinktank.com/114.114.114.114
 server=/jsthjsgc.com/114.114.114.114
+server=/jsti.com/114.114.114.114
 server=/jstianniao.com/114.114.114.114
 server=/jstide.com/114.114.114.114
 server=/jstlcyy.com/114.114.114.114
