--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51625,6 +51625,7 @@ server=/jsyd139.com/114.114.114.114
 server=/jsyefc.com/114.114.114.114
 server=/jsyf88.com/114.114.114.114
 server=/jsyghw.com/114.114.114.114
+server=/jsyhkf.com/114.114.114.114
 server=/jsyhxl.com/114.114.114.114
 server=/jsyinba.com/114.114.114.114
 server=/jsyixin.com/114.114.114.114
