accelerated-domains: add singsun.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77039,6 +77039,7 @@ server=/singhead.com/114.114.114.114
 server=/singlecool.com/114.114.114.114
 server=/singmaan.com/114.114.114.114
 server=/singoo.cc/114.114.114.114
+server=/singsun.net/114.114.114.114
 server=/singtaonet.com/114.114.114.114
 server=/singtown.com/114.114.114.114
 server=/singularity-ai.com/114.114.114.114
