accelerated-domains: add jskxjl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51432,6 +51432,7 @@ server=/jskoso.com/114.114.114.114
 server=/jskpcg.org/114.114.114.114
 server=/jskuajing.com/114.114.114.114
 server=/jskwt.com/114.114.114.114
+server=/jskxjl.com/114.114.114.114
 server=/jslcjt.com/114.114.114.114
 server=/jsldweb.com/114.114.114.114
 server=/jslegal.com/114.114.114.114
