--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20589,6 +20589,7 @@ server=/chizhouhospital.com/114.114.114.114
 server=/chizhoujob.com/114.114.114.114
 server=/chizhouren.com/114.114.114.114
 server=/chiznews.com/114.114.114.114
+server=/chjgg.com/114.114.114.114
 server=/chjsj.com/114.114.114.114
 server=/chjso.com/114.114.114.114
 server=/chlbiz.com/114.114.114.114
