--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22176,6 +22176,7 @@ server=/cnhutong.com/114.114.114.114
 server=/cnhvacrnet.com/114.114.114.114
 server=/cnhwjt.com/114.114.114.114
 server=/cnhyjt.com/114.114.114.114
+server=/cnhyky.com/114.114.114.114
 server=/cnhzsc.com/114.114.114.114
 server=/cnhzz.com/114.114.114.114
 server=/cniao5.com/114.114.114.114
