--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28674,6 +28674,7 @@ server=/easilysend.com/114.114.114.114
 server=/easitcn.com/114.114.114.114
 server=/easonad.com/114.114.114.114
 server=/easou.com/114.114.114.114
+server=/east-regis.com/114.114.114.114
 server=/east.net/114.114.114.114
 server=/east263.com/114.114.114.114
 server=/eastall.com/114.114.114.114
