accelerated-domains: add h-diode.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39266,6 +39266,7 @@ server=/gzzrdc007.com/114.114.114.114
 server=/gzzx.cc/114.114.114.114
 server=/h-ceo.com/114.114.114.114
 server=/h-college.com/114.114.114.114
+server=/h-diode.com/114.114.114.114
 server=/h-heguo.com/114.114.114.114
 server=/h-shgroup.com/114.114.114.114
 server=/h-ui.net/114.114.114.114
