--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50953,6 +50953,7 @@ server=/jobvvv.com/114.114.114.114
 server=/jobxinpg.com/114.114.114.114
 server=/jobyp.com/114.114.114.114
 server=/jocat.com/114.114.114.114
+server=/joclabor.net/114.114.114.114
 server=/jocltd.com/114.114.114.114
 server=/joctech.com/114.114.114.114
 server=/jocund-gift.com/114.114.114.114
