--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51531,6 +51531,7 @@ server=/jsshfcw.com/114.114.114.114
 server=/jsshow.net/114.114.114.114
 server=/jsshrzx.com/114.114.114.114
 server=/jsshuntai.com/114.114.114.114
+server=/jssihuan.com/114.114.114.114
 server=/jssling.com/114.114.114.114
 server=/jssnrcb.com/114.114.114.114
 server=/jssoar.com/114.114.114.114
