accelerated-domains: add jsywjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51643,6 +51643,7 @@ server=/jsysxx.net/114.114.114.114
 server=/jsytsw.com/114.114.114.114
 server=/jsyun.cc/114.114.114.114
 server=/jsyunhao.com/114.114.114.114
+server=/jsywjt.com/114.114.114.114
 server=/jsyxjg.com/114.114.114.114
 server=/jsyxrcb.com/114.114.114.114
 server=/jsz120.com/114.114.114.114
