accelerated-domains: add qiaojiamuxian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69609,6 +69609,7 @@ server=/qiaohu.com/114.114.114.114
 server=/qiaohuapp.com/114.114.114.114
 server=/qiaohumall.com/114.114.114.114
 server=/qiaoji8.com/114.114.114.114
+server=/qiaojiamuxian.com/114.114.114.114
 server=/qiaojiang.tv/114.114.114.114
 server=/qiaolishuiwu.com/114.114.114.114
 server=/qiaomaren.com/114.114.114.114
