accelerated-domains: add debaochina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25536,6 +25536,7 @@ server=/deathearth.com/114.114.114.114
 server=/deau-cable.com/114.114.114.114
 server=/debao.com/114.114.114.114
 server=/debao123.com/114.114.114.114
+server=/debaochina.com/114.114.114.114
 server=/deben.me/114.114.114.114
 server=/debug.moe/114.114.114.114
 server=/debugdump.com/114.114.114.114
