accelerated-domains: add zjcnyb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102242,6 +102242,7 @@ server=/zjcjwh.com/114.114.114.114
 server=/zjckw.org/114.114.114.114
 server=/zjcloud.com/114.114.114.114
 server=/zjcnbank.com/114.114.114.114
+server=/zjcnyb.com/114.114.114.114
 server=/zjcrcgas.com/114.114.114.114
 server=/zjcrjzj.com/114.114.114.114
 server=/zjctct.com/114.114.114.114
