accelerated-domains: add zwelec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103449,6 +103449,7 @@ server=/zwdsty.com/114.114.114.114
 server=/zwduxs.com/114.114.114.114
 server=/zwechat.com/114.114.114.114
 server=/zwefu.com/114.114.114.114
+server=/zwelec.com/114.114.114.114
 server=/zwfw.com/114.114.114.114
 server=/zwgeek.com/114.114.114.114
 server=/zwgfood.com/114.114.114.114
