accelerated-domains: add huayaocc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44048,6 +44048,7 @@ server=/huaxunbaili.com/114.114.114.114
 server=/huayang.net/114.114.114.114
 server=/huayanghui.net/114.114.114.114
 server=/huayanwater.com/114.114.114.114
+server=/huayaocc.com/114.114.114.114
 server=/huayaody.com/114.114.114.114
 server=/huayi-ks.com/114.114.114.114
 server=/huayicn.com/114.114.114.114
