accelerated-domains: add cnjunhe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22233,6 +22233,7 @@ server=/cnjp-exp.com/114.114.114.114
 server=/cnjpetr.org/114.114.114.114
 server=/cnjrna.com/114.114.114.114
 server=/cnjtjtss.com/114.114.114.114
+server=/cnjunhe.com/114.114.114.114
 server=/cnjunzilan.com/114.114.114.114
 server=/cnjurry.com/114.114.114.114
 server=/cnjxl.com/114.114.114.114
