accelerated-domains: add santianfilter.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73460,6 +73460,7 @@ server=/santak-ups.com/114.114.114.114
 server=/santanjob.com/114.114.114.114
 server=/santelvxing.com/114.114.114.114
 server=/santezjy.com/114.114.114.114
+server=/santianfilter.net/114.114.114.114
 server=/santiego.ink/114.114.114.114
 server=/santiyun.com/114.114.114.114
 server=/santongit.com/114.114.114.114
